[gd_scene load_steps=4 format=3 uid="uid://b7dcwhldl8p0x"]

[ext_resource type="Script" path="res://Gamemode_Menu.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dqw1l7ds7sp6q" path="res://ChiKareGo2.ttf" id="2_xvees"]
[ext_resource type="Texture2D" uid="uid://cwvtqwk1awrux" path="res://YellowStar.svg.png" id="3"]

[node name="Gamemode_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 200.0
offset_right = 88.0
offset_bottom = 223.0
grow_horizontal = 2

[node name="Gamemode Title" type="Label" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xvees")
theme_override_font_sizes/font_size = 30
text = "Choose a Difficulty"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Centrebox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Difficulty buttons" type="VBoxContainer" parent="Centrebox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Easy_button" type="Button" parent="Centrebox/Difficulty buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xvees")
theme_override_font_sizes/font_size = 20
text = "Easy"

[node name="Medium_button" type="Button" parent="Centrebox/Difficulty buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xvees")
theme_override_font_sizes/font_size = 20
text = "Medium"

[node name="Hard_button" type="Button" parent="Centrebox/Difficulty buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xvees")
theme_override_font_sizes/font_size = 20
text = "Hard"

[node name="Back_button" type="Button" parent="Centrebox/Difficulty buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xvees")
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="Easystars 1" type="Sprite2D" parent="."]
position = Vector2(568, 286)
scale = Vector2(0.022, 0.022)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[node name="Mediumstars 1" type="Sprite2D" parent="."]
position = Vector2(562, 317)
scale = Vector2(0.022, 0.022)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[node name="Mediumstars 2" type="Sprite2D" parent="Mediumstars 1"]
position = Vector2(545.455, 0)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[node name="Hardstars 1" type="Sprite2D" parent="."]
position = Vector2(562, 352)
scale = Vector2(0.022, 0.022)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[node name="Hardstars 2" type="Sprite2D" parent="Hardstars 1"]
position = Vector2(272.727, -454.531)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[node name="Hardstars 3" type="Sprite2D" parent="Hardstars 1"]
position = Vector2(545.455, 0)
texture = ExtResource("3")
offset = Vector2(2909.09, -727.273)

[connection signal="pressed" from="Centrebox/Difficulty buttons/Easy_button" to="." method="_on_Easy_button_pressed"]
[connection signal="pressed" from="Centrebox/Difficulty buttons/Medium_button" to="." method="_on_Medium_button_pressed"]
[connection signal="pressed" from="Centrebox/Difficulty buttons/Hard_button" to="." method="_on_Hard_button_pressed"]
[connection signal="pressed" from="Centrebox/Difficulty buttons/Back_button" to="." method="_on_Back_button_pressed"]
